sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:19: error: unbound placeholder parameter
        case _ => _
                  ^