sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {
  
  var ecart = getNombreValeurs()
  var aMixe:Boolean = false
  
  do {
    
    aMixe = false
    
    if (ecart > 1) {
      
      ecart = (ecart.toDouble / 1.3).toInt
      
      ecart match {
        
        case 9 => ecart = 11
        case 10 => ecart = 11
        case _ => _
        
      }
      
    }
    
    var i = 0
    
    while (i+ecart < getNombreValeurs()) {
      
      if (!plusPetit(i,i+ecart)) {echange(i,i+ecart); aMixe=true}
      i = i + 1
      
    }
    
  } while (ecart>1 || aMixe)
}